[tool.poetry]
name = "piano-game"
version = "0.1.0"
description = "piano game written in python"
authors = ["arsikurin <2024kurin.av@student.letovo.ru>"]
readme = "README.md"
packages = [{include = "piano_game"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.3"
colourlib = "^0.5.3"
numpy = "^1.24.2"
pygame-menu = "^4.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
